--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "autoprefixer": "10.4.16",
     "postcss": "8.4.32",
-    "tailwindcss": "3.3.6"
+    "tailwindcss": "3.3.6",
+    "@types/node": "^20.0.0"
   }
 }
